--- a/figuras.html
+++ b/figuras.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Figuras geométricas</h1>
-    <script src="./figuras.js"></script>
+    <script src="./js/figuras.js"></script>
 </body>
 </html>
