pagina basica de descuento

--- a/descuentos.html
+++ b/descuentos.html
@@ -7,8 +7,23 @@
     <title>Porcentajes y descuentos</title>
 </head>
 <body>
-    <h1>Descuentos y Porcentajes</h1>
-
+    <header>
+        <h1>Descuentos y Porcentajes</h1>
+        <p>Este es el segundo taller del Curso Práctico de JS</p>
+    </header>
+    <section>
+        <h2>Calcula el precio a pagar de tus productos con descuento</h2>
+        <form action="#">
+            <label for="price">Escribe el precio de tu producto: </label>
+            <input id="price" type="number">
+            <label for="discount">Escribe el descuento de tu producto: </label>
+            <input id="discount" type="number">
+            <button type="button" onclick="CalculateDiscount()" >
+                Calcular el precio con descuento
+            </button>
+            <p id="resultP"></pid>
+        </form>
+    </section>
     <script src="./js/descuentos.js"></script>
 </body>
 </html>
