--- a/figuras.html
+++ b/figuras.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figuras Geométricas</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/figuras.css">
 </head>
 <body>
-    <h1>Figuras geométricas</h1>
+    <main>
+        <section>
+            <h1>Figuras Geometricas</h1>
+            <p>Este es el primer taller del curso practico de JS</p>
+        </section>
+        <section>
+            <div>
+                <div>
+                    <b>Area:</b> <span>1500cm2</span>
+                    <b>Perimetro:</b> <span>1500cm</span>
+                </div>
+                <div>
+                    <h3>Triangulo</h3>
+                    <form action="#">
+                        <div>
+                            <label for="">Numero 1</label> 
+                            <input type="number">
+                        </div>
+                        <div>
+                            <label for="">Numero 2</label> 
+                            <input type="number">
+                        </div>
+                        <div>
+                            <button type="submit">Calcullar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="./js/figuras.js"></script>
 </body>
 </html>
